--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <div class="header">
             <div class="logo">Header Logo</div>
             <div class="links">
-                <a class="link" href="">header link one</a>
-                <a class="link" href="">header link two</a>
-                <a class="link" href="">header link three</a>
+                <a class="link" href="#">header link one</a>
+                <a class="link" href="#">header link two</a>
+                <a class="link" href="#">header link three</a>
             </div>
         </div>
         <div class="hero">
@@ -44,9 +44,18 @@
             </div>
         </div>
         <div class="quote">
-            <div class="quote-text">This is an inspring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <p class="quote-text">This is an inspring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
             <div class="quoter">-Thor, God of Thunder</div>
         </div>
-        <div class="footer"></div>
+        <div class="sign-up">
+            <div class="banner">
+                <div class="banner-left">
+                    <div class="banner-main">Call to action! It's time!</div>
+                    <div class="banner-subtext">Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <button>Sign up</button>
+            </div>
+        </div>
+        <div class="footer">Copyright &copy; The Odin Project 2024</div>
     </body>
 </html>
